--- a/pom.xml
+++ b/pom.xml
@@ -70,4 +70,13 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://192.168.33.10:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
+
+
 </project>
