--- a/pom.xml
+++ b/pom.xml
@@ -69,11 +69,16 @@
             </plugin>
         </plugins>
     </build>
-  <distributionManagement>
+    <distributionManagement>
         <repository>
-            <id>deploymentRepo</id>
-            <name>Nexus Repository</name>
-            <url>http://http://192.168.50.4:8081/repository/maven-releases/</url>
+                <id>releasesRepo</id> <!-- ID unique pour les releases -->
+                <name>Nexus Releases Repository</name>
+                <url>http://192.168.50.4:8081/repository/maven-releases/</url>
         </repository>
+        <snapshotRepository>
+                <id>snapshotsRepo</id> <!-- ID unique pour les snapshots -->
+                <name>Nexus Snapshots Repository</name>
+                <url>http://192.168.50.4:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
     </distributionManagement>
 </project>
